 - Улучшено движение картинок, квадратов, добавлены более удобные методы. Пофикшена задержка цикла, чтобы не замедляла игру.
22.01.2023 (Толя)
 - Переименовал картинки в спрайты.
 - Разобрался с Trait-ами, удалил повторяющийся код в Sprite и Rect, добавил Layered, Rectangular трейты, начал делать спрайты.
 - Доделал спрайты, пофиксил вылет при большом фпс(1000 гдет), начал разработку групп.
23.01.2023 (Толя)
 - Добавил документацию, попытался реализовать группу, но не вышло
24.01.2023 (Толя)
 - Добавил группы. Если спрайт нужно закинуть в группу, то хранить его в переменной нельзя. Однако, группы ещё следует доработать.
 - Думал что возможно лучше хранить спрайты в массиве, экпериментировал, но потом получил переполнение стэка и передумал

### ПЕРВАЯ ИТЕРАЦИЯ: Лиса, ракетница, манекен, который получает урон, физика выпускаемых ракет, движение лисы (можно без прыжка).
? Добавить спрайты
? Добавить группу спрайтов
? Добавить LayeredGroup для спрайтов
? Добавить SpriteManager
? Добавить PhysicsManager
? Добавить Component(enum, туда пишем все перечисления компонентов)
? Добавить ComponentManager(внутрь спрайта наверное запихну)
? Добавить PhysicsComponent(enum, туда пишем всё что является компонентом физики)
? Добавить AnimationComponent
? Добавить анимацию смены кадров
? Добавить таймеры (SetTimeout, SetInterval, аля js)
? Добавить столкновения и их проверку через Rect, а потом пускай этим PhysicsManager занимается вообще
? или Добавить GravityComponent(и добавить его в перечисление PhysicsComponent)
? или Добавить физику по Верлету и не париться, прям как в том видосе
? Добавить управление
? Добавить Unit(юнита, у него будет хп и какие-то ещё штуки)
? Добавить UnitComponent (такие можно будет добавлять только в юнита, enum по типу PhysicsComponent)
? Добавить Лису
? Добавить Ракетницу
? Добавить Снаряд
? Добавить Мишень

### ВТОРАЯ ИТЕРАЦИЯ: Больше оружия, ветер, разные фоны для уровня, базовый звук.

