@@ -28,6 +28,9 @@
  - Думал что возможно лучше хранить спрайты в массиве, экпериментировал, но потом получил переполнение стэка и передумал
 
 ### ПЕРВАЯ ИТЕРАЦИЯ: Лиса, ракетница, манекен, который получает урон, физика выпускаемых ракет, движение лисы (можно без прыжка).
+? Добавить Enum Group
+? Добавить Group - группа с вектором и swap_back и удалением под капотом
+? Добавить Named Group - группа с хешмапой под капотом
 ? Добавить спрайты
 ? Добавить группу спрайтов
 ? Добавить LayeredGroup для спрайтов
